--- a/gamiavisrocandlove.html
+++ b/gamiavisrocandlove.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roc & Love - Votre surprise vous attend 💝</title>
+    <title>Roc & Love - Une surprise vous attend 💝</title>
     
-    <meta property="og:title" content="Roc & Love - Votre surprise vous attend 💝">
+    <meta property="og:title" content="Roc & Love - Une surprise vous attend 💝">
     <meta property="og:description" content="Un mot doux pour nous, une surprise pour vous">
     <meta property="og:image" content="https://rocandlove-avisgami.vercel.app/assets/og-image.jpg">
     <meta property="og:image:width" content="1200">
@@ -200,7 +200,7 @@
                     </div>
                     <p class="text-center text-xs text-gray-500 mt-3 italic">⏰ Offre valable 6 mois</p>
                 </div>
-                <div class="bg-yellow-900/20 border border-yellow-700/30 rounded-xl p-6 mb-6"><p class="georgia text-center text-sm text-gray-300">💝 Nous avons hâte de vous accueillir à nouveau au Roc & Love !</p></div>
+                <div class="bg-yellow-900/20 border border-yellow-700/30 rounded-xl p-6 mb-6"><p class="georgia text-center text-sm text-gray-300">💝 Nous avons hâte de vous accueillir à nouveau chez Roc & Love !</p></div>
                 <div class="grid grid-cols-2 gap-3">
                     <button onclick="copyAlreadyCode()" class="cormorant py-3 px-6 rounded-xl font-bold text-black transition-all duration-300 hover:scale-105" style="background: linear-gradient(135deg, #B9A378 0%, #8B7355 100%);">📋 Copier</button>
                     <button onclick="shareCode()" class="cormorant py-3 px-6 rounded-xl font-bold border-2 border-yellow-700 text-white transition-all duration-300 hover:bg-yellow-900/20">📱 Partager</button>
