--- a/gamiavisadmin.html
+++ b/gamiavisadmin.html
@@ -97,6 +97,13 @@
             <p class="georgia text-xs text-center text-gray-500 mt-2">✨ C’est ce lien qui part dans le SMS</p>
         </div>
 
+        <button type="button"
+        onclick="copySmsText()"
+        class="cormorant w-full mt-2 py-3 px-4 rounded-lg font-bold text-sm text-black transition-all duration-300 hover:scale-105"
+        style="background:linear-gradient(135deg,#F5E3C3 0%,#B9A378 100%);">
+    📲 Copier le SMS prêt à envoyer
+</button>
+
         <!-- Lien long en option -->
         <details class="mt-2">
             <summary class="georgia text-sm text-gray-400 cursor-pointer">Afficher le lien long (optionnel)</summary>
